<?xml version="1.0" encoding='utf-8' standalone='no'?>
<resources>
    <string name="app_name">enVote</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_new_email">New Email</string>
    <string name="menu_browse">Browse</string>

    <string name="home_past_message_title">Your Past Messages</string>
    <string name="home_no_email_title">No Past Emails</string>
    <string name="home_no_email_body">Click to Create</string>
    <string name="home_test_name">Mattias Henders</string>
    <string name="home_test_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="location_loading">Loading Location…</string>
    <string name="location_select">Select Location</string>

    <string name="email_to">To:</string>
    <string name="email_send">Send Email</string>

    <string name="email_subject">Subject:</string>
    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>

    <string name="issue2">This is the text for issue 1. It is expandable, which means I need to make this string relatively long. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="issue1">Temperatures are projected to rise between 4 and 10 degrees by the end of the 21st century. \nCommon concerns with rising global temperatures include sea level rise, increased frequency in extreme weather events, and displacement of groups living near the equator.</string>
    <string name="issue_title">Select Your Issue</string>
    <string name="show_more">Click to Show More…</string>

    <string name="issue_empty">No issue, therefore no description.</string>
    <string name="issue_trash">Negative effects of improper waste management not only ends in a disgusting view but also affects the overall economy of a country.
                                Moreover, animals depended on the environment also face a great threat due to the oil spills and leaching of chemicals which directly cause soil and water contamination.
    </string>
    <string name="issue_water">Clean freshwater is an essential ingredient for a healthy human life.
                                Drinking water fountains serve fresh, potable water around the city.
    </string>
    <string name="issue_electric">EVs have better acceleration than gas cars. That\'s because electric motors deliver full torque right away, unlike internal combustion engines that need to gear up.
                                    Electric motors are an incredibly efficient and durable technology
    </string>
    <string name="issue_air">Decreased air quality introduces a number of health risks and concerns.
                            Ground-level ozone (a key component of smog) is associated with many health problems.
    </string>

    <string name="repName1">Donald Trump</string>
    <string name="repDesc1">Representative description</string>
    <string name="repName2">Justin Trudeau</string>
    <string name="repDesc2">Representative description</string>

    <string name="liberal">Liberal</string>
    <string name="conservative">Conservative</string>
    <string name="select">Select</string>

    <string name="showmore">Show More</string>

    <string name="map_error">Location Permission not granted</string>
    <string name="map_no_location">Location Not Found</string>
    <string name="map_go_back">Go Back</string>

    <string name="loginUsername">Username</string>
    <string name="loginPass">Password</string>
    <string name="login">LOGIN</string>
    <string name="signupNote">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="signinNote">Already have an account?</string>
    <string name="signin">Log in</string>
    <string name="registerBtn">Sign Up</string>
    <string name="full_name">Fest Fester</string>
    <string name="username">festy12</string>
    <string name="fullNameHint">Full Name</string>
    <string name="updateProfile">UPDATE</string>
    <string name="userNameHint">Username</string>
    <string name="emailHint">Email Address</string>
    <string name="web_client_id">639231938996-96b0p8ugq3id97a5pdph15bhflhp233e.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>

    <integer name="google_play_services_version">12451000</integer>
</resources>
