<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_beige"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/imgSize_large"
        android:layout_marginLeft="@dimen/margin_xLarge"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_xLarge"
        android:layout_marginBottom="@dimen/margin_xLarge"
        android:src="@drawable/ic_envote_logo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/rounded_corner"
        android:elevation="10dp"
        android:minHeight="48dp"
        android:hint="@string/loginUsername"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="43dp"
        android:background="@drawable/rounded_corner"
        android:elevation="10dp"
        android:minHeight="48dp"
        android:hint="@string/loginPass"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="43dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#369B40"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFF3E0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signupNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="15dp"
            android:text="@string/signupNote" />

        <TextView
            android:id="@+id/signupLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#369B40"
            android:text="@string/signup" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_nav"
        android:background="@color/green_forest"/>

</LinearLayout>